final made by cursor
finla made by cursor

--- a/index.html
+++ b/index.html
@@ -185,5 +185,7 @@
         container.style.setProperty('--mouse-x', '50%');
         container.style.setProperty('--mouse-y', '50%');
     </script>
+    <script type="module" src="/src/index.tsx"></script>
+
 </body>
 </html>
