--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <title>Anto Bredly | Exploring Intelligence</title>
+    <title>Anto Bredly's Portfolio</title>
     <meta name="description" content="Portfolio of Anto Bredly, a creative technologist and student exploring AI, ML, and complex systems.">
     <meta name="theme-color" content="#1A1D23">
     
