--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <title>Anto Bredly's Portfolio</title>
     <meta name="google-site-verification" content="XMr_yNQ-rFFzO_W289rAXWrXeJFndHb5nizP_L4MwGI" />
+    <meta name="msvalidate.01" content="7947A183400D6F46DDB840A22AE81542" />
     <meta name="description" content="Portfolio of Anto Bredly, a creative technologist and student exploring AI, ML, and complex systems.">
     <meta name="theme-color" content="#1A1D23">
     
